# dosage

./: .gitignore  CMakeLists.txt  README.md
include/: glad.h
include/core/: Engine.hpp
src/: glad.c  main.cpp
src/core/: Engine.cpp
